# ScalableServices-ECI_v1.0

./: .dockerignore  .env  .gitattributes  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  launcher.sh  pyrightconfig.json  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml  codeql.yml
config/: .env.example
docs/: ACTIVITY_LOGS.md  DASHBOARD_GUIDE.md  DEVELOPER_GUIDE.md  QA_GUIDE.md  QUICK_START.md  README.md
k8s/: README.md  k3d-config.yaml  postgres-deployment.yaml  redis-deployment.yaml  seed-job.yaml  services-deployment.yaml
scripts/: README.md
scripts/db/: validate.sh
scripts/fixtures/: export-fixtures.sh  promote-fixtures.sh
scripts/k8s/: deploy-k8s.sh
scripts/lib/: common.sh
scripts/migrations/: 001_create_activity_logs.sql
scripts/platform/: manage.sh  start.sh  stop.sh
scripts/seed/: validate.sh
scripts/tests/: crud-test.sh  test-suite.sh
services/customers/: Dockerfile  pyproject.toml
services/dashboard/: Dockerfile  main.py  migrations.py  requirements.txt
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: auth_local.py  core_settings.py  main.py
services/inventory/: Dockerfile  alembic.ini  pyproject.toml
services/products/: Dockerfile  pyproject.toml
services/products/alembic/: env.py
services/products/alembic/versions/: 0001_init.py  0002_add_seller_fields.py
services/products/app/: main.py
services/products/app/api/: routes.py
services/products/app/application/: schemas.py  service.py
services/products/app/domain/: models.py
services/seed/: seed.py  (+2 more)
(+67 files in other folders)
